// Copyright 2022 The Kubeflow Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.kubeflow.common.pkg.apis.common.v1;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1";

// +k8s:openapi-gen=true
// +k8s:deepcopy-gen=true
// JobCondition describes the state of the job at a certain point.
message JobCondition {
  // Type of job condition.
  optional string type = 1;

  // Status of the condition, one of True, False, Unknown.
  optional string status = 2;

  // The reason for the condition's last transition.
  optional string reason = 3;

  // A human readable message indicating details about the transition.
  optional string message = 4;

  // The last time this condition was updated.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time lastUpdateTime = 5;

  // Last time the condition transitioned from one status to another.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time lastTransitionTime = 6;
}

// +k8s:openapi-gen=true
// +k8s:deepcopy-gen=true
// JobStatus represents the current observed state of the training Job.
message JobStatus {
  // Conditions is an array of current observed job conditions.
  repeated JobCondition conditions = 1;

  // ReplicaStatuses is map of ReplicaType and ReplicaStatus,
  // specifies the status of each replica.
  map<string, ReplicaStatus> replicaStatuses = 2;

  // Represents time when the job was acknowledged by the job controller.
  // It is not guaranteed to be set in happens-before order across separate operations.
  // It is represented in RFC3339 form and is in UTC.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time startTime = 3;

  // Represents time when the job was completed. It is not guaranteed to
  // be set in happens-before order across separate operations.
  // It is represented in RFC3339 form and is in UTC.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time completionTime = 4;

  // Represents last time when the job was reconciled. It is not guaranteed to
  // be set in happens-before order across separate operations.
  // It is represented in RFC3339 form and is in UTC.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time lastReconcileTime = 5;
}

// +k8s:openapi-gen=true
// +k8s:deepcopy-gen=true
// ReplicaSpec is a description of the replica
message ReplicaSpec {
  // Replicas is the desired number of replicas of the given template.
  // If unspecified, defaults to 1.
  optional int32 replicas = 1;

  // Template is the object that describes the pod that
  // will be created for this replica. RestartPolicy in PodTemplateSpec
  // will be overide by RestartPolicy in ReplicaSpec
  optional k8s.io.api.core.v1.PodTemplateSpec template = 2;

  // Restart policy for all replicas within the job.
  // One of Always, OnFailure, Never and ExitCode.
  // Default to Never.
  optional string restartPolicy = 3;
}

// +k8s:openapi-gen=true
// ReplicaStatus represents the current observed state of the replica.
message ReplicaStatus {
  // The number of actively running pods.
  optional int32 active = 1;

  // The number of pods which reached phase Succeeded.
  optional int32 succeed = 2;

  // The number of pods which reached phase Failed.
  optional int32 failed = 3;

  // A label selector is a label query over a set of resources. The result of matchLabels and
  // matchExpressions are ANDed. An empty label selector matches all objects. A null
  // label selector matches no objects.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector labelSelector = 4;
}

